reparation du gitpush & logo header + responsif

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,4 @@
 /* Cargolonie styles scss */
-<<<<<<< HEAD
-=======
-
-/*
-* #111c32 bleu foncé
-*
-*
-*/
-
->>>>>>> 20f1bdc (first design - still in wip)
 @font-face {
   font-family: "Vinson";
   src: url(fonts/VInson-Regular.ttf) format("truetype");
@@ -33,14 +23,8 @@
   padding: 0;
 }
 
-body {
-<<<<<<< HEAD
-  overflow: hidden;
-=======
->>>>>>> 20f1bdc (first design - still in wip)
-}
-
 #webwrapper {
+  font-family: "Vinson";
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
@@ -49,94 +33,61 @@ body {
 /**********/
 /* LOADER */
 /**********/
-<<<<<<< HEAD
-=======
 /*
->>>>>>> 20f1bdc (first design - still in wip)
 #loader-wrapper {
-  overflow: hidden;
-  position: absolute;
-  top: 10vh;
-  left: 150px;
-  display: flex;
-  align-items: center;
-  background-color: #fff;
-  z-index: 10;
-}
-<<<<<<< HEAD
+	overflow: hidden;
+	position: absolute;
+	top: 10vh; left: 150px;
 
-/* Spinning wheel keyframes */
-=======
+	display: flex;
+	align-items: center;
+
+	background-color: #fff;
+	z-index: 10;
+}
 */
 /* Spinning wheel keyframes */
 /*
->>>>>>> 20f1bdc (first design - still in wip)
 #wheelimg {
-  position: absolute;
-  left: 62%;
-  top: 34%;
+	position: absolute;
+	left: 62%; top: 34%;
 }
 
 .wheel-rotate {
-  animation: roule 0.8s linear 2 forwards;
+	animation: roule .8s linear 2 forwards;
 }
 
 .wheel-stop {
-  animation: roule2 1.8s ease-out 1 forwards;
+	animation: roule2 1.8s ease-out 1 forwards
 }
 
 @-moz-keyframes roule {
-  from {
-    -moz-transform: rotate(0deg);
-  }
-  to {
-    -moz-transform: rotate(360deg);
-  }
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
 }
 @-webkit-keyframes roule {
-  from {
-    -webkit-transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-  }
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
 }
 @keyframes roule {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
 }
+
 @-moz-keyframes roule2 {
-  from {
-    -moz-transform: rotate(0deg);
-  }
-  to {
-    -moz-transform: rotate(360deg);
-  }
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
 }
 @-webkit-keyframes roule2 {
-  from {
-    -webkit-transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-  }
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
 }
 @keyframes roule2 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
 }
-<<<<<<< HEAD
-=======
-/*
->>>>>>> 20f1bdc (first design - still in wip)
+
+*/
 /* All sections */
 .section {
   overflow: hidden;
@@ -147,101 +98,55 @@ body {
 /**********/
 header {
   transform-origin: top;
-<<<<<<< HEAD
-  height: 100vh;
-  padding: 5vh 10% 5% 10%;
-=======
-  height: 50vh;
-  padding: 5vh 10% 4% 10%;
-  font-family: 'Vinson';
->>>>>>> 20f1bdc (first design - still in wip)
+  height: 75vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
-<<<<<<< HEAD
-  box-shadow: 0 0 9px 12px #fff;
-=======
-/*  box-shadow: 0 0 9px 12px #fff;*/
->>>>>>> 20f1bdc (first design - still in wip)
   z-index: 2;
 }
 header h1 {
   display: flex;
-<<<<<<< HEAD
-  letter-spacing: 25px;
-  opacity: 0;
-  font-family: "Vinson";
-  font-weight: 800;
-  font-size: 10vh;
-  margin: auto 0 20vh 40%;
-  transform: translateX(800px);
-}
-header h1::before {
-  content: "LA";
-  position: absolute;
-  top: -13vh;
-  left: -75%;
-}
-header h1 span {
-  opacity: 0;
-}
-header p {
-  font-size: calc(10px + 1vw);
-  opacity: 0;
-}
-
-#header-logo {
-  position: absolute;
-  left: 150px;
-  top: 10vh;
-}
-
-=======
   letter-spacing: 3px;
-  font-weight: 800;
-  font-size: 7em;
-  transform: translateY(-5em);
-  margin-top: 15%;
   opacity: 0;
-}
-header h1 span {
+  font-weight: 800;
+  font-size: 6.5em;
+  margin-top: 17rem;
+  margin-left: 17rem;
+  transform: translateX(-5em);
 }
 
 #header-logo {
   position: absolute;
-  left: 28em;
-  top: 17em;
+  left: 50%;
+  top: 10rem;
   width: 86em;
+  transform: translateX(-50%);
 }
 
 #title-la {
-  opacity: 0;
   position: absolute;
   top: -1em;
   left: 1em;
+  opacity: 0;
 }
+
 /**************/
 /* SUB HEADER */
 /**************/
 #sub-header {
   width: 100vw;
-  height: 50vh;
-
+  height: 25vh;
   display: flex;
-  justify-content: center; align-items: center;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 30px 9px 12px #fff;
 }
 #sub-header h3 {
   font-size: calc(10px + 1vw);
   opacity: 0;
-
-  font-family: 'Vinson';
   font-weight: 200;
-  margin-top: 10%;
 }
 
-
->>>>>>> 20f1bdc (first design - still in wip)
 /*****************/
 /* KEYFRAAAAAMES */
 /*****************/
@@ -262,11 +167,7 @@ header h1 span {
 */
 /* Display p after loading */
 .show-header-p {
-<<<<<<< HEAD
-  animation: anim-reveal-header 1.9s ease-out 1.7s forwards;
-=======
   animation: anim-reveal-header 1.9s ease-out 3s forwards;
->>>>>>> 20f1bdc (first design - still in wip)
 }
 
 @keyframes anim-reveal-header {
@@ -278,36 +179,23 @@ header h1 span {
   }
 }
 /* Shrink HEADER (93%) */
-<<<<<<< HEAD
-.shrink-header {
-  animation: anim-shrink-header 1.2s ease-out 2s forwards;
-=======
 /*
 .shrink-header {
-  animation: anim-shrink-header 1.7s ease-out 2s forwards;
->>>>>>> 20f1bdc (first design - still in wip)
+	animation: anim-shrink-header 1.2s ease-out 2s forwards;
 }
 
 @keyframes anim-shrink-header {
-  from {
-    height: 100vh;
-  }
-  to {
-<<<<<<< HEAD
-    height: 94vh;
-  }
+	from {
+		height: 100vh;
+	}
+	to {
+		height: 94vh;
+	}
 }
-/* Keyframe for TITLE */
-.show-title-la {
-  animation: anim-show-title-la 1.8s linear forwards;
-=======
-    height: 98vh;
-  }
-}*/
+*/
 /* Keyframe for TITLE */
 .show-title-la {
   animation: anim-show-title-la 2s linear 2.4s forwards;
->>>>>>> 20f1bdc (first design - still in wip)
 }
 
 @keyframes anim-show-title-la {
@@ -318,30 +206,20 @@ header h1 span {
     opacity: 1;
   }
 }
-<<<<<<< HEAD
-.lettre {
-  animation: anim-title-slide 2.5s cubic-bezier(0, 0, 0.53, 1) forwards;
-}
-
-=======
-
 .show-title {
   animation: anim-show-title 5s linear forwards;
 }
 
 @keyframes anim-show-title {
   0% {
-    animation-timing-function: cubic-bezier(.35,0,.35,1);
+    animation-timing-function: cubic-bezier(0.35, 0, 0.35, 1);
     opacity: 0;
     transform: translateY(-5em);
   }
-
   50% {
     opacity: 0.6;
     transform: translateY(0);
   }
-
-
   100% {
     opacity: 1;
     transform: translateY(0);
@@ -349,92 +227,38 @@ header h1 span {
 }
 /*
 .lettre {
-  animation: anim-title-slide 1.5s cubic-bezier(.39,.9,.37,.89) forwards;
+	animation: anim-title-slide 2.5s cubic-bezier(0,0,.53,1) forwards;
 }
-*/
-/*
->>>>>>> 20f1bdc (first design - still in wip)
+
 @-moz-keyframes anim-title-slide {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-<<<<<<< HEAD
-    -moz-transform: translateX(-800px);
-=======
-    -moz-transform: translateY(4em);
->>>>>>> 20f1bdc (first design - still in wip)
-  }
+    from {
+    	opacity: 0;
+    }
+    to {
+    	opacity: 1;
+		-moz-transform: translateX(-800px);
+    }
 }
 @-webkit-keyframes anim-title-slide {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-<<<<<<< HEAD
-    -webkit-transform: translateX(-800px);
-=======
-    -webkit-transform: translateY(4em);
->>>>>>> 20f1bdc (first design - still in wip)
-  }
+    from {
+		opacity: 0;
+    }
+    to {
+		opacity: 1;
+		-webkit-transform: translateX(-800px);
+    }
 }
 @keyframes anim-title-slide {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-<<<<<<< HEAD
-    transform: translateX(-800px);
-  }
-}
-.lettre:nth-child(1) {
-  animation-delay: 3.6s;
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+		transform: translateX(-800px);
+	}
 }
 
-.lettre:nth-child(2) {
-  animation-delay: 3.9s;
-}
-
-.lettre:nth-child(3) {
-  animation-delay: 4.2s;
-}
-
-.lettre:nth-child(4) {
-  animation-delay: 4.5s;
-}
-
-.lettre:nth-child(5) {
-  animation-delay: 4.8s;
-}
-
-.lettre:nth-child(6) {
-  animation-delay: 5.1s;
-}
-
-.lettre:nth-child(7) {
-  animation-delay: 5.4s;
-}
-
-.lettre:nth-child(8) {
-  animation-delay: 5.7s;
-}
-
-.lettre:nth-child(9) {
-  animation-delay: 6s;
-}
-
-.lettre:nth-child(10) {
-  animation-delay: 6.3s;
-}
-=======
-    transform: translateY(4em);
-  }
-}
-*/
-/*
 .lettre:nth-child(4) {
   animation-delay: .4s;
 }
@@ -465,34 +289,16 @@ header h1 span {
 .lettre:nth-child(3) {
   animation-delay: 4s;
 }
-
 */
-
->>>>>>> 20f1bdc (first design - still in wip)
-
 /**********************/
 /* MAIN PHOTO SECTION */
 /**********************/
 #main-photo1 {
   height: 120vh;
   width: 100vw;
-<<<<<<< HEAD
-  background-image: url(img/photo_rand.jpg);
-=======
   background-image: url(img/background_cargosmall.jpg);
->>>>>>> 20f1bdc (first design - still in wip)
   background-attachment: fixed;
   background-size: cover;
-}
-
-.photo-shadow:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  bottom: 1px;
-  z-index: -1;
-  transform: scale(0.9);
-  box-shadow: 0px 0px 8px 2px #0f0f0f;
 }
 
 /**********************/
@@ -500,18 +306,6 @@ header h1 span {
 /**********************/
 #whatwedo {
   width: 100vw;
-<<<<<<< HEAD
-  background-color: #0f0f0f;
-  color: #ffffff;
-  padding: 150px 165px 150px 150px;
-  box-shadow: 0 0 9px 12px #0f0f0f;
-  z-index: 2;
-}
-#whatwedo .whatwedo-article {
-  width: 610px;
-  height: 310px;
-=======
-  min-height: 150vh;
   background-color: #04382b;
   color: #ffffff;
   padding: 150px 365px 150px 350px;
@@ -521,38 +315,15 @@ header h1 span {
 #whatwedo .whatwedo-article {
   width: 750px;
   height: 450px;
->>>>>>> 20f1bdc (first design - still in wip)
   opacity: 0;
+  margin: 4em 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-<<<<<<< HEAD
-  border: 5px solid #717171;
-  border-radius: 10px;
-=======
->>>>>>> 20f1bdc (first design - still in wip)
   transform: translateX(-600px);
 }
 #whatwedo .whatwedo-article img {
   display: block;
-<<<<<<< HEAD
-  width: 300px;
-  height: 300px;
-  border: 2px solid red;
-}
-#whatwedo .whatwedo-article .whatwedo-text-div {
-  width: 300px;
-  height: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 15px 10px 0 10px;
-  background-color: #00000070;
-  border: 2px solid blue;
-}
-#whatwedo .whatwedo-article .whatwedo-text-div h2 {
-  margin-bottom: 15px;
-=======
   width: 400px;
   height: 440px;
   border-radius: 5px 0 0 5px;
@@ -570,7 +341,6 @@ header h1 span {
 }
 #whatwedo .whatwedo-article .whatwedo-text-div h2 {
   margin-bottom: 2em;
->>>>>>> 20f1bdc (first design - still in wip)
   text-decoration: underline;
 }
 #whatwedo .whatwedo-article:nth-child(even) {
@@ -578,22 +348,12 @@ header h1 span {
   margin-left: auto;
   transform: translateX(600px);
 }
-<<<<<<< HEAD
-
-=======
 #whatwedo .whatwedo-article:nth-child(even) img {
   border-right: none;
   border-radius: 0 5px 5px 0;
 }
-/* img test with div */
-.article-img {
-  width: 400px;
-  height: 440px;
-  border-radius: 5px 0 0 5px;
-  background-image: url(img/cargos/cargorange.jpg);
-}
+
 /* Show Articles Animations */
->>>>>>> 20f1bdc (first design - still in wip)
 .show-odd-article {
   animation: anim-show-odd-article 1.6s ease-out forwards;
 }
@@ -601,11 +361,7 @@ header h1 span {
 @keyframes anim-show-odd-article {
   from {
     opacity: 0;
-<<<<<<< HEAD
-    transform: translateX(-600px);
-=======
     transform: translateX(-800px);
->>>>>>> 20f1bdc (first design - still in wip)
   }
   to {
     opacity: 1;
@@ -619,20 +375,13 @@ header h1 span {
 @keyframes anim-show-even-article {
   from {
     opacity: 0;
-<<<<<<< HEAD
-    transform: translateX(600px);
-=======
     transform: translateX(800px);
->>>>>>> 20f1bdc (first design - still in wip)
   }
   to {
     opacity: 1;
     transform: translateX(0);
   }
 }
-<<<<<<< HEAD
-=======
-
 /* Hide Articles Animations */
 .hide-odd-article {
   animation: anim-hide-odd-article 1.6s ease-out forwards;
@@ -674,17 +423,12 @@ header h1 span {
   color: #fff;
 }
 #lateam h2 {
-  font-family: 'Vinson';
   font-size: 2em;
   margin-bottom: 2em;
 }
-#lateam-wrapper {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
 #lateam article {
-  width: fit-content; max-width: 280px;
+  width: fit-content;
+  max-width: 280px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -693,6 +437,13 @@ header h1 span {
   margin: 2em;
   border-radius: 10%;
 }
+
+#lateam-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 .id-photo {
   width: 240px;
   height: 180px;
@@ -700,82 +451,72 @@ header h1 span {
   background-position: center;
   border-radius: 10% 10% 0 0;
 }
+
 .id-photo1 {
   background-image: url(img/team/ewen.jpeg);
 }
+
 .id-photo2 {
   background-image: url(img/team/adele.jpeg);
 }
+
 .id-photo3 {
   background-image: url(img/team/jb.jpeg);
 }
+
 .id-photo4 {
   background-image: url(img/team/ganael.jpg);
 }
+
 .id-photo5 {
   background-image: url(img/team/tristan.jpg);
 }
+
 .id-photo6 {
   background-image: url(img/team/nikos.jpg);
 }
+
 .id-photo7 {
   background-image: url(img/team/yannick.jpeg);
 }
+
 .id-photo8 {
   background-image: url(img/team/philippe.jpeg);
 }
+
 .lateam-desc {
   width: 240px;
   height: 90px;
   text-align: center;
-  display: flex; align-items: center;
-  font-family: "Vinson";
+  display: flex;
+  align-items: center;
   font-weight: 200;
   padding-top: 5px;
 }
 
->>>>>>> 20f1bdc (first design - still in wip)
 /***********************/
 /* PRE FOOTER / E-MAIL */
 /***********************/
+footer {
+  color: #faebd7;
+}
+
 #pre-footer {
   width: 100%;
   display: flex;
-<<<<<<< HEAD
-  flex-direction: column;
-  align-items: center;
-  padding: 70px 0;
-}
-#pre-footer h3 {
-  font-family: "Vinson";
-  font-weight: 800;
-  font-size: 1.7em;
-  margin-bottom: 30px;
-}
-#pre-footer form {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  justify-content: space-evenly;
-=======
   justify-content: center;
-  font-family: "Vinson";
   padding: 6em 0;
   background: linear-gradient(#04382b, #000000);
 }
-#contact-desc {
+#pre-footer #contact-desc {
   height: 700px;
   padding: 0 5em;
-  color: #faebd7;
 }
 #pre-footer h3 {
   font-weight: 800;
   font-size: 1.7em;
-  text-decoration: underline;
   margin-bottom: 30px;
-}
-#pre-footer form {
->>>>>>> 20f1bdc (first design - still in wip)
+  text-decoration: underline;
 }
 #pre-footer form .femail-group {
   margin: 10px;
@@ -787,18 +528,10 @@ header h1 span {
   border-radius: 10px;
   font-size: 1.1em;
   font-weight: 200;
-<<<<<<< HEAD
-  font-family: "Vinson";
-=======
->>>>>>> 20f1bdc (first design - still in wip)
   margin-top: 20px;
 }
 #pre-footer form .femail-label {
   font-size: 1.2em;
-<<<<<<< HEAD
-  font-family: "Vinson";
-=======
->>>>>>> 20f1bdc (first design - still in wip)
   font-weight: 200;
 }
 #pre-footer form .femail-input {
@@ -815,16 +548,7 @@ header h1 span {
 #pre-footer form .femail-form-msg {
   width: 20vw;
 }
-<<<<<<< HEAD
 
-#footer-infos {
-  padding: 4rem;
-  background-color: #0f0f0f;
-  box-shadow: 0 0 9px 12px #0f0f0f;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-=======
 /* Photo contact */
 #contact-photo {
   width: 500px;
@@ -838,30 +562,24 @@ header h1 span {
 #contact-or {
   display: block;
   margin: 20px 0;
-  font-size: 2em
+  font-size: 2em;
 }
 
 #footer-infos {
-  color: #fff;
   display: flex;
   flex-direction: column;
->>>>>>> 20f1bdc (first design - still in wip)
 }
 #footer-infos .finfo {
   display: flex;
   flex-direction: column;
-<<<<<<< HEAD
-  align-items: center;
-  margin: 0 30px;
-=======
   margin: 15px 30px;
   font-size: 1.3em;
 }
+
 #footer-bottom {
   height: 8em;
   width: 100%;
   background-color: #000;
->>>>>>> 20f1bdc (first design - still in wip)
 }
 
 /*# sourceMappingURL=styles.css.map */
