correction - tristan.JPG n'apparaissait pas

--- a/styles.css
+++ b/styles.css
@@ -469,7 +469,7 @@ header h1 {
 }
 
 .id-photo5 {
-  background-image: url(img/team/tristan.jpg);
+  background-image: url(img/team/tristan.JPG);
 }
 
 .id-photo6 {
