--- a/cargolonie.scss
+++ b/cargolonie.scss
@@ -516,7 +516,7 @@ header {
   background-image: url(img/team/ganael.jpg);
 }
 .id-photo5 {
-  background-image: url(img/team/tristan.jpg);
+  background-image: url(img/team/tristan.JPG);
 }
 .id-photo6 {
   background-image: url(img/team/nikos.jpg);
