--- a/cargolonie.scss
+++ b/cargolonie.scss
@@ -119,7 +119,7 @@ header {
 	display: flex;
 	flex-direction: column;align-items: center;
 
-	z-index: 2;
+	z-index: 3;
 
 	h1 {
 		display: flex;
@@ -161,7 +161,9 @@ header {
 
 	display: flex;
 	justify-content: center; align-items: center;
-	box-shadow: 0 30px 9px 12px #fff;
+	box-shadow: 0 0 9px 12px #fff;
+	position: relative;
+	z-index: 2;
 
 	h3 {
 		font-size: calc(10px + 1vw);
