--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 2;
+  z-index: 3;
 }
 header h1 {
   display: flex;
@@ -139,7 +139,9 @@ header h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 30px 9px 12px #fff;
+  box-shadow: 0 0 9px 12px #fff;
+  position: relative;
+  z-index: 2;
 }
 #sub-header h3 {
   font-size: calc(10px + 1vw);
