--- a/cargolonie.scss
+++ b/cargolonie.scss
@@ -37,9 +37,7 @@ html {
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: right;
-}
 
-#contentwrapper {
 	font-family: "Vinson";
 	color: #faebd7;
 
@@ -47,8 +45,6 @@ html {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
-	margin: 0 10vw;
 }
 
 
@@ -123,7 +119,7 @@ html {
 
 header {
 	height: 60vh; width: 65vw;
-	margin-top: 20vh;
+	margin-top: 13vh;
 
 	display: flex;
 	align-items: center; justify-content: center;
@@ -371,6 +367,13 @@ header {
   animation-delay: 4s;
 }
 */
+  /*****************/
+ /* TO THE MAAAIN */
+/*****************/
+
+main {
+	width: 100%;
+}
 
   /**********************/
  /* MAIN PHOTO SECTION */
@@ -552,7 +555,7 @@ header {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 6em 5vw 12em 5vw;
+	padding: 6em 10vw 12em 10vw;
 	margin: 12em 0;
 /*	background-color: #04382b;*/
 
@@ -566,21 +569,20 @@ header {
 	}
 
 	article {
-		width: 13vw; height: 13vw;
+		min-width: 13vw; min-height: 13vw;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		background-color: #000000d1;
-		padding: 5px;
+		padding: 1px;
 		margin: 2vw;
 		border-radius: 5px;
 	}
 }
 
-#lateam-wrapper {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
+#lateam-wrapper {	
+	display: grid;
+	grid-template-columns: repeat(4, auto);
 }
 
 .id-photo {
@@ -622,9 +624,10 @@ header {
 	height: 40%;
 	text-align: center;
 	font-size: 1em;
-	display: flex; align-items: center;
+	display: flex;
+	flex-direction: column; align-items: center;
 	font-weight: 200;
-	padding: 1em;
+	padding: 5px;
 }
 
   /***********************/
@@ -769,6 +772,7 @@ footer {
 
 		.whatwedo-article {
 			width: 90vw; height: fit-content;
+			min-width: auto; min-heigth: auto;
 			opacity: 1;
 			flex-direction: column;
 
@@ -786,6 +790,15 @@ footer {
 		.show-even-article,
 		.hide-even-article {
 			animation: none;
+		}
+	}
+
+	#lateam-wrapper {
+		display: flex;
+		flex-direction: column;
+
+		.id-photo {
+			height: 165px;
 		}
 	}
 
